--- a/app/views/assignments/_row_buttons.html.erb
+++ b/app/views/assignments/_row_buttons.html.erb
@@ -16,5 +16,6 @@
     <% end %>
     <%= link_to '<i class="fa fa-bar-chart-o" title="View Grades"></i>'.html_safe, view_grades_assignment_path(assignment) %>
   <% end %>
+  <%= link_to '<i class="fa fa-calendar" title="Change Date"></i>'.html_safe, view_grades_assignment_path(assignment) %>
   <%= link_to 'Edit', edit_assignment_path(assignment), class: "btn btn-mini" %>
 <% end %>
