--- a/app/views/assignments/_row_buttons.html.erb
+++ b/app/views/assignments/_row_buttons.html.erb
@@ -6,6 +6,7 @@
 
 <% if current_user && current_user.teaching?(assignment.course) %>
   <% if assignment.status(current_user).name == "Future" %>
+    <i class="fa fa-calendar muted"></i>
     <i class="fa fa-legal muted"></i>
     <i class="fa fa-bar-chart-o muted"></i>
   <% else %>
@@ -16,6 +17,32 @@
     <% end %>
     <%= link_to '<i class="fa fa-bar-chart-o" title="View Grades"></i>'.html_safe, view_grades_assignment_path(assignment) %>
   <% end %>
-  <%= link_to '<i class="fa fa-calendar" title="Change Date"></i>'.html_safe, view_grades_assignment_path(assignment) %>
+  <%= link_to '<i class="fa fa-calendar" title="Update Assignment Date"></i>'.html_safe, "#", class: "change-date" %>
   <%= link_to 'Edit', edit_assignment_path(assignment), class: "btn btn-mini" %>
 <% end %>
+
+
+<div class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="dateModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModal">Change Assignment Dates</h3>
+  </div>
+  <%= form_for assignment do |f| %>
+    <div class="modal-body">
+      <p><%= assignment.name %></p>
+      <p>
+        <%= f.label :active_at %>
+        <%= f.date_field :active_at %>
+      </p>
+      <p>
+        <%= f.label :due_at %>
+        <%= f.date_field :due_at %>
+      </p>
+    </div>
+    <div class="modal-footer">
+      <%= f.submit "Save New Dates", class: "btn btn-primary" %>
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
+
+  <% end %>
+</div>
